# Ip-Switch

./: .gitattributes  .gitignore  1.html  2.css  INSTALLER-README.md  README-EN.md  README.md  README_CN.md  README_EN.md  build-installer.bat  build-installer.md  ico-clean.bat  index.html  installer.iss  ip-switch.nsi  package-lock.json  package.json  pnpm-lock.yaml  promotion.md  start-dev-admin.bat  start.bat  vite.config.js
scripts/: sync-version.mjs
src/: auto-switch-template.js  auto-switch.js  hosts.js  i18n.js  main.js  network-status.js  network.js  proxy.js  scenes.js  state.js  style.css  theme.js  ui.js  utils.js  window-controls.js
src-tauri/: Cargo.toml  app.manifest  build.rs  embed-manifest.ps1  tauri.conf.json
src-tauri/src/: admin.rs  hosts.rs  main.rs  network.rs  proxy.rs  scenes.rs  tray_icon.rs
src/styles/: base.css  buttons.css  icons.css  layout.css  modal.css  network-filter.css  network.css  responsive.css  scenes.css  status.css  theme.css  titlebar.css
